# MoleSurface

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILLS.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.claude/agents/: mole-compat-check.md  release-validator.md
.claude/commands/: add-page.md  build.md  check.md  release.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  release.yml.disabled  welcome.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Sidebar.tsx  StreamPage.tsx  Terminal.tsx  TitleBar.tsx
src/lib/: github.ts  mole.ts  theme.ts
src/pages/: Analyze.tsx  Clean.tsx  Dashboard.tsx  Install.tsx  InstallerPage.tsx  Optimize.tsx  Purge.tsx  Settings.tsx  Uninstall.tsx
